--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background:  url("http://127.0.0.1:5500/assets/img/slider/anh1.jpg") top center/ cover no-repeat; 
+    background:  url("../img/slider/anh1.jpg") top center/ cover no-repeat; 
         
 }
 
